--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,26 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<div class="jumbotron">
+  <div class="container">
+    <h1>Pages#home</h1>
+    <p>Find me in app/views/pages/home.html.erb</p>
+    <a href="#" class="btn btn-primary">Read more</a>
+  </div>
+</div>
+<section class="container">
+  <div class="row">
+    <div class="col-12 text-center">
+      
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-4">
+      <p> This is the first column </p>
+    </div>
+    <div class="col-xs-4">
+      <p> This is the second column </p>
+    </div>
+    <div class="col-xs-4">
+      <p> This is the third column </p>
+    </div>
+  </div>
+</section>
