--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,18 +9,22 @@
 <section class="container">
   <div class="row">
     <div class="col-12 text-center">
-      
+      <h3>Latest events</h3>
+      <p>Yabadabadoo placeholder text here with a pinch of random text and a little bit of extra words op top.</p>
     </div>
   </div>
   <div class="row">
     <div class="col-xs-4">
-      <p> This is the first column </p>
+      <img class="img-responsive" src="http://6798-presscdn-0-89.pagely.netdna-cdn.com/wp-content/uploads/2015/03/NJ-Tech-Meetup_Hoboken-e1425935269237.jpeg" alt="A group of people at a meeting">
+      <p>This is the first column with text and more information.</p>
     </div>
     <div class="col-xs-4">
-      <p> This is the second column </p>
+      <img class="img-responsive" src="http://6798-presscdn-0-89.pagely.netdna-cdn.com/wp-content/uploads/2015/03/NJ-Tech-Meetup_Hoboken-e1425935269237.jpeg" alt="A group of people at a meeting">
+      <p>This is the second column with text and more information.</p>
     </div>
     <div class="col-xs-4">
-      <p> This is the third column </p>
+      <img class="img-responsive" src="http://6798-presscdn-0-89.pagely.netdna-cdn.com/wp-content/uploads/2015/03/NJ-Tech-Meetup_Hoboken-e1425935269237.jpeg" alt="A group of people at a meeting">
+      <p>This is the third column with text and more information.</p>
     </div>
   </div>
 </section>
