Fix update not working and improve the form to create a new event

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,9 +1,11 @@
-<div class="panel panel-default">
-  <div class="panel-heading">
-    Create an event
-  </div>
+<div class="container">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      Create an event
+    </div>
 
-  <div class="panel-body">
-    <%= render 'form' %>
+    <div class="panel-body">
+      <%= render 'form' %>
+    </div>
   </div>
 </div>
