--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -16,13 +16,13 @@
   </div>
 
   <div class="form-group">
-    <label>Event starts at</label>
-    <%= f.text_field :starts_at, placeholder: "Event start date & time", class: "form-control" %>
+    <label>Start time</label>
+    <%= f.datetime_select :starts_at, class: 'form-control' %>
   </div>
 
   <div class="form-group">
-    <label>Event ends at</label>
-    <%= f.text_field :ends_at, placeholder: "Event end date & time", class: "form-control" %>
+    <label>End time</label>
+    <%= f.datetime_select :ends_at, class: 'form-control' %>
   </div>
 
   <div class="form-group">
@@ -46,6 +46,14 @@
   <div class="form-group">
     <%= f.check_box :includes_drinks %> Drinks will be served at my event
   </div>
+
+  <label>Subjects</label>
+
+  <%= f.collection_check_boxes(:subject_ids, Subject.all, :id, :name) do |b| %>
+    <div class="form-group">
+      <%= b.check_box(class: "check_box") %> <%= b.object.name %>
+    </div>
+  <% end %>
 
 
   <label>Create this event?</label>
