--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,11 +10,20 @@
       <!-- Main Info -->
       <h4>Main Info</h4>
       <p>Event name: <%= @event.name %></p>
+      <p>Event starts at: <%= @event.starts_at %></p>
+      <p>Event ends at: <%= @event.ends_at %></p>
+      <p>Event price: <%= @event.price %></p>
+      <p>Event capacity: <%= @event.capacity %></p>
 
 
       <!-- About -->
       <h4>About</h4>
       <p><%= @event.description %></p>
+
+      <!-- Extras -->
+      <h4>Additional information</h4>
+      <p> Event serves drinks: <%= @event.includes_drinks %></p>
+      <p> Event serves food: <%= @event.includes_food %></p>
 
 
       <!-- Themes -->
