Fix back button not working on event show page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -36,5 +36,5 @@
 
   </div>
 
-  <%= link_to "Back", event_path, class: "btn btn-default" %>
+  <%= link_to "Back", events_path, class: "btn btn-default" %>
 </div>
