--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,5 +1,11 @@
 <%= form_for @event do |f| %>
 
+<ul>
+   <% @event.errors.full_messages.each do |msg| %>
+     <li><%= msg %></li>
+   <% end %>
+</ul>
+
 <div class="form-group">
   <label>Event name</label>
   <%= f.text_field :name, placeholder: "Event name", class: "form-control" %>
