Add Font-Awesome and expanded homepage and add footer

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,16 +15,52 @@
   </div>
   <div class="row">
     <div class="col-xs-4">
-      <img class="img-responsive" src="http://6798-presscdn-0-89.pagely.netdna-cdn.com/wp-content/uploads/2015/03/NJ-Tech-Meetup_Hoboken-e1425935269237.jpeg" alt="A group of people at a meeting">
+      <img class="img-responsive" src="http://img05.deviantart.net/f814/i/2013/324/9/3/loading_animation_2_by_ivany86-d6uvc5m.png" alt="A group of people at a meeting">
       <p>This is the first column with text and more information.</p>
     </div>
     <div class="col-xs-4">
-      <img class="img-responsive" src="http://6798-presscdn-0-89.pagely.netdna-cdn.com/wp-content/uploads/2015/03/NJ-Tech-Meetup_Hoboken-e1425935269237.jpeg" alt="A group of people at a meeting">
+      <img class="img-responsive" src="http://img05.deviantart.net/f814/i/2013/324/9/3/loading_animation_2_by_ivany86-d6uvc5m.png" alt="A group of people at a meeting">
       <p>This is the second column with text and more information.</p>
     </div>
     <div class="col-xs-4">
-      <img class="img-responsive" src="http://6798-presscdn-0-89.pagely.netdna-cdn.com/wp-content/uploads/2015/03/NJ-Tech-Meetup_Hoboken-e1425935269237.jpeg" alt="A group of people at a meeting">
+      <img class="img-responsive" src="http://img05.deviantart.net/f814/i/2013/324/9/3/loading_animation_2_by_ivany86-d6uvc5m.png" alt="A group of people at a meeting">
       <p>This is the third column with text and more information.</p>
     </div>
   </div>
 </section>
+<section>
+  <div class="jumbotron">
+    <div class="container">
+      <h3>Find an event</h3>
+      <p>Search her for an event and meetup with other new developers!</p>
+      <div class="search-bar form-group">
+        <button class="btn btn-primary">Search</button>
+      </div>
+    </div>
+  </div>
+</section>
+<section>
+  <div class="container">
+    <div class="text-center">
+      <h3>Thousands of events happening at anytime</h3>
+      <p>Find an event near you, meet people with the same interests and become a better coder.</p>
+      <button class="btn btn-secondary">CHECK ALL EVENTS</button>
+    </div>
+  </div>
+</section>
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="text-center col-xs-12">
+        <h6>
+        Get in touch with the creatives behind Codaisseurup, any way you like.
+        </h6>
+      </div>
+    </div>
+    <div class="row social-buttons">
+        <i class="fa fa-github-square social-button"></i>
+        <i class="fa fa-facebook-square social-button"></i>
+        <i class="fa fa-linkedin-square social-button"></i>
+    </div>
+  </div>
+</footer>
