--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,32 @@
 // application.scss
-
+@import "font-awesome";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
 .jumbotron {
-  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQESYXMHzsoTBptv_EvzhgUWHqx2o3-EFpoI-6emd5FGCB4erUUwezRy9Q");
+  background-image: url("http://img02.deviantart.net/bfa1/i/2013/310/5/a/7heaven_landscape_wallpaper_by_ivany86-d6t8496.png");
   background-size: cover;
+}
+
+footer {
+  background-color: #58739e;
+  margin-top: 5px;
+  padding: 5px;
+  color: white;
+  h6 {
+    font-size: 14px;
+    font-weight: bold;
+  }
+}
+
+.social-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  margin: 10px;
+}
+
+.social-button{
+  margin: 0 10px;
 }
