--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,28 @@
-<h3>This application was built in 2017</h3>
+<div class="jumbotron">
+  <div class="container">
+    <h1>About Codaisseurup</h1>
+    <p>A learning project</p>
+  </div>
+</div>
+<section class="container">
+  <div class="row">
+    <div class="col-12 text-center">
+      <h3>This application was built in 2017</h3>
+      <p>The year I switched carreers, became a front-end developer, went to Codaisseur for proper nerd training and worked hard to become a junior full-stack developer.</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-4 center-content">
+      <a href="https://www.meetup.com/nl-NL/" target="_blank"><img class="img-responsive image-round about" src="https://cdn-images-1.medium.com/max/1600/1*EK8I8k19h9V04NnyO59C_A.png" alt="Meetup logo"></a>
+      <p>Check out the original Meetup website on which this project is based.</p>
+    </div>
+    <div class="col-xs-4 center-content">
+      <a href="#" target="_blank"><img class="img-responsive image-round about" src="https://pbs.twimg.com/profile_images/679634619998842880/L9Y-i7rM.jpg" alt="Codaisseur logo"></a>
+      <p>Read more about the Codaisseur Academy on their website.</p>
+    </div>
+    <div class="col-xs-4 center-content">
+      <a href="https://github.com/Claudia413/" target="_blank"><img class="img-responsive image-round about" src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-256.png" alt="Github logo"></a>
+      <p>If you are interested in seeing more of my work, all my code and projects can be found on Github.</p>
+    </div>
+  </div>
+</section>
