--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @event do |f| %>
+<%= form_for @event, html: { multipart: true } do |f| %>
 
 <ul>
    <% @event.errors.full_messages.each do |msg| %>
@@ -51,6 +51,19 @@
   </div>
   <div class="form-group">
     <%= f.check_box :includes_drinks %> Drinks will be served at my event
+  </div>
+
+  <label>Photos</label>
+
+  <div id="photos">
+    <%= render 'photos/list' %>
+  </div>
+
+  <div class="form-group">
+    <span class="btn btn-default">
+      Upload Photos
+      <%= file_field_tag "images[]", type: :file, multiple: true %>
+    </span>
   </div>
 
   <label>Subjects</label>
