--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -39,7 +39,7 @@
       <!-- Photos -->
       <h4>Photos</h4>
       <% @event.photos.each do |photo| %>
-        <%= image_tag photo.image %>
+        <%= image_tag photo.image.thumbnail %>
       <% end %>
 
       <!-- Themes -->
